spade-tests/src/snapshots/spade_tests__typeinference__type_error_has_replacements_applied.snap
---
source: spade-tests/src/typeinference.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Expected type int<8>, got int<9>
   ┌─ testinput:12:13
   │
12 │             x + 1
   │             ^^^^^ Expected int<8>, got int<9>
   │
   = Addition creates one more output bit than the input to avoid overflow


